# Qt-Hand-Gesture-App

./: .gitignore  BUILD  CMakeLists.txt  LICENSE  ModelBuilding.ipynb  README.md  WORKSPACE_attachment.txt  capture_thread.cpp  capture_thread.h  constants.h  gesture_predictor.cpp  gesture_predictor.h  hand_detector_process_launcher.cpp  hand_detector_process_launcher.h  hand_gestures_classifier.pt  handlandmarks.h  handlandmarksCPU.cpp  main.cpp  mainChildHandDetector.cpp  mainParentHandDetector.cpp  mainwindow.cpp  mainwindow.h  model.pt  predict_gesture_thread.cpp  predict_gesture_thread.h  resources.h  shared_memory_reader.cpp  shared_memory_reader.h  shared_memory_writer.cpp  shared_memory_writer.h  stylesheet.qss  timer.cpp  timer.h  utilities.cpp  utilities.h
